Clean up GameState & CheckMurder code, Romantic gets partner's role if they had a kill button (Ruthless if no killer or NNK), Optimize, Fix Ruthless Romantic not winning

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1106,7 +1106,7 @@
   "RemainingText.ImpPlural": "Impostors",
   "RemainingText.NKSingle": "Neutral Killer",
   "RemainingText.NKPlural": "Neutral Killers",
-  "RemainingText.Suffix": "left",
+  "RemainingText.Suffix": " left",
   "RemainingText.EjectionSuffix.NKSingle": "remains.",
   "RemainingText.EjectionSuffix.NKPlural": "remain.",
   "Cooldown": "Cooldown",
@@ -2788,6 +2788,7 @@
   "MastermindDelay": "Manipulation Notify Delay",
   "ManipulateNotify": "\\n<color=#ff1919>You were manipulated by the Mastermind!</color>\\n<color=#ffff00>You must kill someone within <color=#ffa500>{0}s</color> or you die!</color>",
   "ManipulateTaskNotify": "\\n<color=#ff1919>You were manipulated by the Mastermind!</color>\\n<color=#ffff00>You must complete a task within <color=#ffa500>{0}s</color> or you die!</color>",
+  "ManipulatePetNotify": "\\n\\n<color=#ff1919>You were manipulated by the Mastermind!</color>\\n<color=#ffff00>You must kill someone within <color=#ffa500>{0}s</color> or you die!</color>\n<color=#ffffff>Use your pet button near someone to kill them.</color>",
   "ManipulatedKilled": "The player you manipulated has killed / completed a task",
   "MastermindTargetSurvived": "<color=#00ff00>You survive</color>",
   "Gambler": "Gambler",
