Add Swapster, Improve Reject SS code, Fix error spams in EAC, Fix Electic, Fix FireWorks, Don't TP dead players on random spawn

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -583,7 +583,7 @@
   "ImpostorTOHEInfoLong": "(Impostors):\\nAs the Impostor, your goal is to simply kill off the crewmates.\\nYou can sabotage and vent.",
   "CrewmateTOHEInfoLong": "(Crewmates):\\nAs the Crewmate, your goal is quite simple. Find and exile the Impostors.\\n\\nCrewmates win by getting rid of all killers or by finishing all their tasks.",
   "BountyHunterInfoLong": "(Impostors):\\nIf you successfully eliminate your assigned target, your next kill cooldown will be reduced, but if you eliminate anyone else, your next kill cooldown will be lengthened; the target will switch after a predetermined time.",
-  "FireWorksInfoLong": "(Impostors):\\nAs a Fireworker, you can plant up to three firework bombs using shapeshift. If you're the last impostor standing, you can use shapeshift to detonate the bombs and cause area damage. But be careful, the bombs can also harm you. If the bombs eliminate all surviving players, it's a victory for the impostors.",
+  "FireWorksInfoLong": "(Impostors):\\nAs a Fireworker, you can plant up to three firework bombs using shapeshift/by petting your pet. If you're the last impostor standing, you can use shapeshift/pet to detonate the bombs and cause area damage. But be careful, the bombs can also harm you. If the bombs eliminate all surviving players, it's a victory for the impostors.",
   "SerialKillerInfoLong": "(Impostors):\\nYou have a shorter kill cooldown than other impostors, but you will die if you don't kill before the end of your shapeshift cooldown.",
   "ShapeMasterInfoLong": "(Impostors):\\nThe Shapemaster has no Shapeshift cooldown, but their default Shapeshift duration is shorter.",
   "MareInfoLong": "(Add-ons):\\nAs the Mare, you have a low kill cooldown but can only kill during lights.\\n\\nAdditionally, your name will appear in red during lights.\\n\\nOnly assigned to Impostors and cannot be guessed.",
@@ -696,7 +696,7 @@
   "TimeMasterInfoLong": "(Crewmates):\\nAs the Time Master, use the vents/pet your pet to mark everyone's position.\\nWhen using the ability again, every alive player will be teleported back to the marked positions.\\n\\nDuring the ability duration, the Time Master gains a time shield, which protects them from death.",
   "CrusaderInfoLong": "(Crewmates):\\nAs the Crusader, use your kill button to crusade a player.\\nIf that player gets attacked, you'll kill the attacker.",
   "ReverieInfoLong": "(Crewmates):\\nAs the Reverie, you can kill but your cooldown starts very high.\\n\\nIt lowers with each kill you make.\\n\\nYou win with other crewmates.",
-  "ArsonistInfoLong": "(Neutrals):\\nArsonist can douse by clicking kill button on a player and following them for few seconds. When dousing starts, successful dousing is indicated by a shield animation (only visible to themselves). When Arsonist douses all surviving players, they can vent to start fire and win alone. If player name shows 「△」, they're being doused; if it shows 「▲」, they're completely doused.",
+  "ArsonistInfoLong": "(Neutrals):\\nArsonist can douse by clicking kill button on a player and following them for few seconds. When dousing starts, successful dousing is indicated by a shield animation (only visible to themselves). When Arsonist douses all surviving players, they can vent/pet their pet to start fire and win alone. If player name shows 「△」, they're being doused; if it shows 「▲」, they're completely doused.",
   "JesterInfoLong": "(Neutrals):\\nJester wins alone if voted out, but loses if still alive at the end. Jester, Executioner, and Innocent can win together.",
   "TerroristInfoLong": "(Neutrals):\\nIf the Terrorist completes all tasks and dies, they win the game alone.",
   "ExecutionerInfoLong": "(Neutrals):\\nThe Executioner has a target with a diamond symbol next to their name. If the target is killed, the Executioner may turn into a Crewmate, Jester, or Opportunist. If the target is voted out, the Executioner wins.",
@@ -2397,6 +2397,9 @@
   "pet_UFO": "UFO",
   "pet_D2WormPet": "Worm",
   "pet_RANDOM_FOR_EVERYONE": "<color=#ffff00>Random</color>",
+  "Swapster": "Swapster",
+  "SwapsterInfo": "Swap Players",
+  "SwapsterInfoLong": "(Impostors):\\nAs the Swapster, you can select 2 players using your shapeshift menu to swap them.",
   "Kidnapper": "Kidnapper",
   "KidnapperInfo": "TP Players to you by shifting into them",
   "KidnapperInfoLong": "(Impostors):\\nAs the Kidnapper, when you shapeshift into someone, they teleport to you.",
