Add Rabbit, Fix Stressed minor bug, Fix Ignitor vision increase delay, Improve Farseer code

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2738,6 +2738,10 @@
   "HHNumOfTargets": "Number of Targets",
   "HHMaxKCD": "Maximum Kill Cooldown",
   "HHMinKCD": "Minimum Kill Cooldown",
+  "Rabbit": "Rabbit",
+  "RabbitInfo": "Get Clues Toward Impostor Locations",
+  "RabbitInfoLong": "(Crewmates):\\nAs the Rabbit, each time you complete a task, you see an arrow pointing towards a random impostor for 5 seconds.\\nNote: This ability may only activate after you've completed a set number of tasks.",
+  "RabbitMinTasks": "Minimum Number of Tasks Completed to Activate Ability",
   "Pyromaniac": "Pyromaniac",
   "PyromaniacInfo": "Douse and Kill Everyone",
   "PyromaniacInfoLong": "(Neutral):\\nAs the Pyromaniac, your job is to kill everyone and be the last one standing. Your special ability is that you can douse players. Whenever you kill a doused player, your kill cooldown will be very short.",
