Start Swiftclaw (unfinished)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2462,6 +2462,11 @@
   "DuellistInfo": "Duel with Players",
   "DuellistInfoLong": "(Impostors):\\As the Duellist, you can shapeshift into someone to teleport them and you next to each other outside the map. You will both be there until one of you die.",
   "TargetCannotBeTeleported": "Target cannot be teleported",
+  "Swiftclaw": "Swiftclaw",
+  "SwiftclawInfo": "Dash to Go Faster",
+  "SwiftclawInfoLong": "(Impostors):\\nAs the Swiftclaw, you can pet your pet to dash, which makes you go faster for a set amount of seconds.",
+  "SwiftclawDashDur": "Dash Duration",
+  "SwiftclawDashSpeed": "Speed During Dash",
   "Cantankerous": "Cantankerous",
   "CantankerousInfo": "Eject Crewmates to Kill",
   "CantankerousInfoLong": "(Impostors):\\nAs the Cantankerous, you can only kill if you have a point. You gain points if a non-impostor player gets ejected.",
