Add Perceiver, Convener, Mathematician

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -939,7 +939,6 @@
   "EnableCustomButton": "Enable Custom Button Images",
   "EnableCustomSoundEffect": "Enable Custom Sound Effects",
   "SwitchVanilla": "Switch Vanilla",
-  "UseVersionProtocol": "Use Advanced Server Protocol\\n(Disabling Requires /up Access)",
   "FastBoot": "Quick Start Mode",
   "UnlockFPS": "Unlock FPS",
   "ForceOwnLanguage": "Force mod to use your language if possible",
@@ -2512,6 +2511,19 @@
   "Nightmare": "Nightmare",
   "NightmareInfo": "You cannot be killed during lights out",
   "NightmareInfoLong": "(Crewmates):\\nAs the Nightmare, you cannot be killed during the lights out sabotage.",
+  "Perceiver": "Perceiver",
+  "PerceiverInfo": "Check How Many Killers Are Nearby",
+  "PerceiverInfoLong": "(Crewmates):\\nAs the Perceiver, you can vent/pet your pet to check how many killers are near you. The radius is specified by the host.",
+  "PerceiverRadius": "Radius",
+  "PerceiverNotify": "There are {0} killers nearby",
+  "Convener": "Convener",
+  "ConvenerInfo": "Teleport Everyone To You",
+  "ConvenerInfoLong": "(Crewmates):\\nAs the Convener, you can vent/pet your pet to teleport everyone to you.",
+  "Mathematician": "Mathematician",
+  "MathematicianInfo": "Ask Math Questions",
+  "MathematicianInfoLong": "():\\nAs the Mathematician, you can use '/quiz [number] [number]' to ask a math question (What is [number] + [number]?). The first player to answer correctly will get shielded for the next round. You can only ask once per meeting.",
+  "MathematicianQuestionString": "What is <b>{0} + {1}</b>?\n\nType '/reply [answer]' to answer.\nFirst to answer correctly gets shielded for the next round!",
+  "MathematicianAnsweredString": "<b>{0}</b> has answered correctly! ({1})\nThey will be shielded for the next round.",
   "Escort": "Escort",
   "EscortInfo": "Role-Block Players to Help the Crew!",
   "EscortInfoLong": "(Crewmates):\\nAs the Escort, you can role-block a player for a specified time using your kill button. A role-blocked player cannot kill, vent, sabotage or report.\\n(Role-Block duration is the same as the hack duration for The Glitch)",
