Disconnecting player now triggers after death abilities, Fix Perceiver, Convener, Mathematician, Drainer, Analyzer, Warlock

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2521,8 +2521,8 @@
   "ConvenerInfoLong": "(Crewmates):\\nAs the Convener, you can vent/pet your pet to teleport everyone to you.",
   "Mathematician": "Mathematician",
   "MathematicianInfo": "Ask Math Questions",
-  "MathematicianInfoLong": "():\\nAs the Mathematician, you can use '/quiz [number] [number]' to ask a math question (What is [number] + [number]?). The first player to answer correctly will get shielded for the next round. You can only ask once per meeting.",
-  "MathematicianQuestionString": "What is <b>{0} + {1}</b>?\n\nType '/reply [answer]' to answer.\nFirst to answer correctly gets shielded for the next round!",
+  "MathematicianInfoLong": "(Crewmates):\\nAs the Mathematician, you can use '/ask [number] [number]' to ask a math question (What is [number] + [number]?). The first player to answer correctly will get shielded for the next round. You can only ask once per meeting.",
+  "MathematicianQuestionString": "What is <b>{0} + {1}</b>?\n\nType '/answer [answer]' to answer.\nFirst to answer correctly gets shielded for the next round!",
   "MathematicianAnsweredString": "<b>{0}</b> has answered correctly! ({1})\nThey will be shielded for the next round.",
   "Escort": "Escort",
   "EscortInfo": "Role-Block Players to Help the Crew!",
