Fix Speedrunner name color, Fix Giant string, Kamikaze marked players now show with a yellow name

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1684,6 +1684,7 @@
   "LookoutInfoLong": "(Crewmates):\\nAs the Lookout, you can see the IDs of every player at all times.\\nThis allows you to see through shapeshifts and camouflages.",
   "Witness": "Witness",
   "WitnessInfo": "Find out if someone killed recently",
+  "WitnessInfoLong": "(Crewmates):\\nWhen you use your kill button on someone, it tells you if the player killed recently or not. The yellow exclamation mark means they've killed, and the green chech mark means they've not.",
   "WitnessTime": "Max Time after killing where killer appears red",
   "WitnessButtonText": "Examine",
   "WitnessFoundInnocent": "<size=3><color=#00ff00>✓</color></size>",
@@ -2439,7 +2440,7 @@
   "TunnelerInfoLong": "(Crewmates):\\nAs the Tunneler, you may mark a position by petting your pet, and then you can teleport back to the marked position by petting your pet again.\\nNote: This role requires the setting 'Use Pets Instead of Venting/Shapeshifting' to be enabled, or it won't spawn.",
   "Detour": "Detour",
   "DetourInfo": "Pass Kills Onto Nearest Player",
-  "DetourInfoLong": "(Crewmate):\\nAs the Detour, all kill button related actions on you will be blocked and instead happen on the closest player to you",
+  "DetourInfoLong": "(Crewmate):\\nAs the Detour, all kill button related actions on you will be blocked and instead happen on the closest player to you.",
   "Monitor": "Telecommunication",
   "MonitorInfo": "Track device usage",
   "MonitorInfoLong": "(Crewmates):\\nAs the Telecommunication, you are notified when anyone uses cameras, vitals, doorlogs, or admin.",
@@ -2807,7 +2808,7 @@
   "EclipseVisionIncrease": "Increase Vision per each kill by",
   "Mastermind": "Mastermind",
   "MastermindInfo": "Make others kill for you",
-  "MastermindInfoLong": "(Impostors):\\nAs the Mastermind, you can use your kill button on a player once to manipulate them. This does nothing if the target doesn't have a kill button and they don't have tasks. But if the target has tasks or a kill button of any type, they'll be told after a delay that they were manipulated and they must complete a task or kill someone within a limited time to survive. If the time limit expires or a meeting gets called before completing a task or killing someone, they die.\\nDouble click on someone to kill them normally.",
+  "MastermindInfoLong": "(Impostors):\\nAs the Mastermind, you can use your kill button on a player once to manipulate them. This does nothing if the target doesn't have a kill button and they don't have tasks, and the setting to use pets isn't enabled. But if the target has tasks or a kill button of any type, they'll be told after a delay that they were manipulated and they must complete a task or kill someone within a limited time to survive. If the time limit expires or a meeting gets called before completing a task or killing someone, they die.\\nDouble click on someone to kill them normally.",
   "MastermindCD": "Manipulate Cooldown",
   "MastermindTimeLimit": "Time Limit to Kill Someone / Complete a Task",
   "MastermindDelay": "Manipulation Notify Delay",
@@ -3087,7 +3088,7 @@
   "Prefix.Nimble": "Nimble",
   "Physicist": "Physicist",
   "PhysicistInfo": "Grants Portable Vitals Access",
-  "PhysicistInfoLong": "\\nGrants portable vitals access for crewmate roles",
+  "PhysicistInfoLong": "\\nGrants portable vitals access for crewmate roles.",
   "Prefix.Physicist": "Physicist",
   "Agitater": "Agitator",
   "AgitaterInfo": "Pass a Bomb onto others",
