--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1649,7 +1649,7 @@
   "DeputyHandcuffDelay": "Handcuff apply delay",
   "Undertaker": "Undertaker",
   "UndertakerInfo": "Take bodies whereever you want to",
-  "UndertakerInfoLong": "(Impostors):\\nAs the Undertaker, you can mark your target using your kill button, then shapeshift/pet to kill them. However, the person you assassinate will teleport to your location when you shapeshift, so their body will be whereever you are! Use this well to hide bodies!",
+  "UndertakerInfoLong": "(Impostors):\\nAs the Undertaker, you can mark your target using your kill button, then shapeshift/pet to kill them. However, the person you assassinate will teleport to your location when you shapeshift, so their body will be wherever you are! Use this well to hide bodies!",
   "Romantic": "Romantic",
   "RomanticInfo": "Select your partner and win with them",
   "RomanticInfoLong": "(Neutral):\\nAs the Romantic, you can first use your kill button on someone to select them as your partner.\\nAfter that, as long as both you and your partner are alive, you can use your kill button on anyone to give your partner a temporarily shield. If your partner wins, you win too.\\n\\nIf your partner dies, your role will change according to the following conditions:\\nIf your partner was a Neutral Killer, you will turn into the Ruthless Romantic, which is a basic neutral killer: Be the last one standing to win. If you win, your partner wins too.\\nIf your target was an Impostor, you become a Refugee. Your job is now to help the impostors (and thus your partner) win.\\nIn every other case, you become the Vengeful Romantic. Your goal is to kill the killer of your partner. If you do so, you and your partner win with the winning team. If you try to kill anyone else, you will die.",
@@ -2745,13 +2745,13 @@
   "AbilityChargesWhenFinishedTasks": "<color=#00ffff>Ability <color=#7FFFD2>Use Gains</color> <color=#ffa500>every 5s</color> when tasks are done</color>",
   "Vengeance": "Vengeance",
   "VengeanceInfo": "Kill your killer to live",
-  "VengeanceInfoLong": "(Neutral):\\nAs the Vengeance, you win when you're the last one standing.\\nAdditionally, when someone tries to kill you, the kill will be blocked and you will be teleported to a random vent. You will have a limited time to kill your killer. If you succeed to do so, you live. If the time runs out before you kill your killer, you die permanately. If you try to kill someone else other than your killer, you will die.",
+  "VengeanceInfoLong": "(Neutral):\\nAs the Vengeance, you win when you're the last one standing.\\nAdditionally, when someone tries to kill you, the kill will be blocked and you will be teleported to a random vent. You will have a limited time to kill your killer. If you succeed to do so, you live. If the time runs out before you kill your killer, you die permanently. If you try to kill someone else other than your killer, you will die.",
   "VengeanceRevengeTime": "Time to Revenge",
   "VengeanceRevenge": "You have {0}s to kill your killer",
   "VengeanceSuccess": "<color=#00ff00>Revenge successful! You live!</color>",
   "HeadHunter": "Head Hunter",
   "HeadHunterInfo": "Kill your target for low cooldown",
-  "HeadHunterInfoLong": "(Neutral):\\nAs the Head Hunter, you have 3 targets that reset every meeting. If you kill one of your targets, your kill cooldown decreases by the set amount permanately. If you kill someone else other than any of your targets, your kill cooldown permanately increases by the set amount. You see your targets with a black name.",
+  "HeadHunterInfoLong": "(Neutral):\\nAs the Head Hunter, you have 3 targets that reset every meeting. If you kill one of your targets, your kill cooldown decreases by the set amount permanently. If you kill someone else other than any of your targets, your kill cooldown permanently increases by the set amount. You see your targets with a black name.",
   "HHSuccessKCDDecrease": "Kill Cooldown Decrease on killing target",
   "HHFailureKCDIncrease": "Kill Cooldown Increase on killing others",
   "HHNumOfTargets": "Number of Targets",
@@ -3001,7 +3001,7 @@
   "TetherNoTarget": "You have no target",
   "Aid": "Aid",
   "AidInfo": "Protect players temporarily",
-  "AidInfoLong": "(Crewmates):\\nAs the Aid, you may use your kill button on someone to protect them from direct attacks temporarily. Neither you or your target will know if someone tried to kill your target.",
+  "AidInfoLong": "(Crewmates):\\nAs the Aid, you may use your kill button on someone to protect them from direct attacks temporarily. Neither you nor your target will know if someone tried to kill your target.",
   "AidDur": "Shield Duration",
   "AidCD": "Shield Cooldown",
   "GuessManager": "Guess Manager",
