Added new strings (and my tag)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2457,6 +2457,8 @@
   "YinYangerInfo": "Make 2 players meet each other to kill them!",
   "YinYangerInfoLong": "(Impostors):\\nAs the Yin Yanger, you may yin yang two players after each meeting. After marking the two players, you can kill normally. When the two yin yanged players go within kill distance of each other, they both suicide.",
   "YinYangCD": "Yin Yang Cooldown",
+  "YinYangMode": "Yin Yang",
+  "YinYangModeNormal": "Kill",
   "Duellist": "Duellist",
   "DuellistInfo": "Duel with Players",
   "DuellistInfoLong": "(Impostors):\\As the Duellist, you can shapeshift into someone to teleport them and you next to each other outside the map. You will both be there until one of you die.",
@@ -2677,6 +2679,8 @@
   "Hookshot": "Hookshot",
   "HookshotInfo": "Pull Players or TP to them",
   "HookshotInfoLong": "(Neutral):\\nAs the Hookshot, you may mark a target by clicking on your target once. Double click to kill them normally.\\n\\nVent to switch between the 2 teleporting modes: Teleport Target to You / You Teleport to Target\\n\\nSabotage/Pet your pet to execute the current selected action mode after marking a target.",
+  "HookshotTpToTarget": "TP to Target",
+  "HookshotPullTarget": "Pull Target",
   "Sprayer": "Sprayer",
   "SprayerInfo": "Place Traps",
   "SprayerInfoLong": "(Neutral):\\nAs the Sprayer, you can place traps by sabotaging/petting your pet. If someone walks into a trap, they'll have lower speed and vision for some time. If a player walks into a trap a specified amount of times, they suicide.",
@@ -3308,6 +3312,18 @@
   "AlchemistShieldOut": "Shield Potion effect expired",
   "AlchemistSpeedOut": "Speed Potion effect expired",
   "AlchemistVisionOut": "Vision Potion effect expired",
+  "PotionInStore": "Potion in store",
+  "ShieldPotion": "Shield Potion",
+  "AwkwardPotion": "Awkward Potion",
+  "TeleportPotion": "Teleport Potion",
+  "SpeedPotion": "Speed Potion",
+  "QuickFixPotion": "Quick Fix Potion",
+  "InvisibilityPotion": "Invisibility Potion",
+  "SightPotion": "Sight Potion",
+  "None": "None",
+  "Stored": "Stored",
+  "QuickFix": "Quick Fix",
+  "CD": "CD",
   "AddictVentButtonText": "Get Fix",
   "AddictInvulnerbilityTimeAfterVent": "<color=#008000>Invulnerbility</color> Time",
   "AddictSpeedWhileInvulnerble": "Movement speed while <color=#008000>Invulnerble</color>",
