--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2070,6 +2070,7 @@
   "FireworksReadyFirePhase": "Fire!",
   "EnterVentWinCountDown": "Enter vent within <b>{0}</b> seconds to win!",
   "InvalidArgs": "Invalid Args",
+  "InvalidArguments": "Invalid Arguments",
   "On": "Always",
   "Off": "OFF",
   "ColoredOn": "<color=#00fefe>ON</color>",
@@ -3580,5 +3581,6 @@
   "RoleSelected": "<b>The role of {0} in the next game will be{1}</b>",
   "UpReplacedMessage": "/up was replaced by /setrole which allows you to set anyone's role for any game by typing '/setrole (ID) (ROLE)'. You can view ID's with /id.\nTo set your own role like with /up, you need to do '/setrole 0 (ROLE)'.",
   "PingText": "Ping",
+  "SettingsForRoleText": "Settings for",
   "NotAssigned": " "
 }
