Add Necromancer & Deathknight (not tested)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2492,6 +2492,7 @@
   "FFFCanKillInfected": "Can Kill Infected Players",
   "FFFCanKillContagious": "Can Kill Contagious Players",
   "FFFCanKillAdmired": "Can Kill Admired Players",
+  "FFFCanKillUndead": "Can Kill Undead Players",
   "Mafioso": "Mafioso",
   "MafiosoInfo": "With Each Tier, you're more Powerful",
   "MafiosoInfoLong": "(Impostors):\\nAs the Mafioso, you gain XP by killing, sabotaging, entering a vent you haven't entered that round yet, or by seeing a player not on your team get ejected. When you have 100 XP, your tier levels up. With each tier, you get progressively more powerful:\\n\\nTier 0: Regular impostor, higher kill cooldown, short kill range\\nTier 1: Long kill range, normal kill cooldown\\nTier 2: Lower kill cooldown\\nTier 3: Dual pistols: you have 2 separate higher kill cooldowns, if at least one of them is up, you can kill!\\nTier 4: Normal kill cooldown on both pistols\\nTier 5: Delayed kills",
@@ -2906,6 +2907,21 @@
   "MagicianBombExploded": "Time bomb exploded",
   "MagicianBombExlodesIn": "Bomb explodes in {0}s",
   "MagicianCardUsed": "Card used",
+  "Necromancer": "Necromancer",
+  "NecromancerInfo": "Recruit Everyone",
+  "NecromancerInfoLong": "(Neutrals):\\nThe Necromancer is the main recruiter for the Undead faction. The first person it kills will become a Deathknight. With the help of the Deathknight, they must work together to convert others to the Undead. If the Necromancer were to die, The Deathknight would turn into Necromancer.",
+  "Deathknight": "Deathknight",
+  "DeathknightInfo": "Help the Necromancer Recruit",
+  "DeathknightInfoLong": "(Neutrals):\\nThe Deathknight must help the Necromancer convert players to the Undead. By using your pet button by someone who the Necromancer had used their kill button on, they will be converted. There can only be one Deathknight at a time, and if the Necromancer dies, the Deathknight will be the new Necromancer.",
+  "UndeadCountMode.None": "None",
+  "UndeadCountMode.Necromancer": "<#f7adcf>Necromancer</color>",
+  "UndeadCountMode.OriginalTeam": "Original Team",
+  "RecruitedByDeathknight": "You've been recruited to the Undead faction!",
+  "DeathknightRecruitedPlayer": "Successfully recruited player to the Undead faction!",
+  "NecromancerRecruitedPlayer": "Successfully recruited player partially",
+  "RecruitedToDeathknight": "The Necromancer recruited you to be their Deathknight!",
+  "InvalidUndeadTarget": "Target cannot be recruited",
+  "Undead-": "Undead ",
   "SoulHunter": "Soul Hunter",
   "SoulHunterInfo": "Hunt Souls To Win",
   "SoulHunterInfoLong": "(Neutrals):\\nAs the Soul Hunter, you can mark your target via your kill button. In the next meeting, you'll be frozen for a set amount of seconds and your target will be notified about being your target. Your target will not be able to vent, call a meeting or kill you. You must kill your target within a specified number of seconds, else you lose a soul. If you kill your target in time, you gain a soul. Collect a set amount of souls to satisfy your win condition. If your win condition is satisfied at the end of the game, you'll win with the winning team.",
@@ -3517,6 +3533,7 @@
   "WinnerRoleText.Poisoner": "Poisoner Wins!",
   "WinnerRoleText.HexMaster": "Hex Master Wins!",
   "WinnerRoleText.Succubus": "Cultist Wins!",
+  "WinnerRoleText.Necromancer": "Undead Faction Wins!",
   "WinnerRoleText.Wraith": "Wraith Wins!",
   "WinnerRoleText.NSerialKiller": "Serial Killer Wins!",
   "WinnerRoleText.Juggernaut": "Juggernaut Wins!",
