Add Strings & Code Cleanup

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -249,6 +249,7 @@
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
   "Flashman": "Flash",
+  "Undead": "Undead",
   "Busy": "Busy",
   "Truant": "Truant",
   "Disco": "Disco",
@@ -302,6 +303,7 @@
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
   "Prefix.Flashman": "Flash",
+  "Prefix.Undead": "Undead",
   "Prefix.Busy": "Busy",
   "Prefix.Truant": "Truant",
   "Prefix.Disco": "Disco",
@@ -543,6 +545,7 @@
   "GuesserInfo": "Guess roles of players in meetings to kill",
   "NecroviewInfo": "See the team of the dead",
   "ReachInfo": "You have a longer kill range",
+  "UndeadInfo": "You're on the Undead faction",
   "BaitInfo": "Your killer self-reports your body",
   "TrapperInfo": "Freeze your killer for a few seconds",
   "OnboundInfo": "You can't be guessed",
@@ -798,6 +801,7 @@
   "DiseasedInfoLong": "(Add-ons):\\nWhen someone tries to use kill button on you, their cooldown will be increased by a configurable amount of time",
   "AntidoteInfoLong": "(Add-ons):\\nWhen someone tries to use kill button on you, their cooldown will be decreased by a configurable amount of time",
   "SwiftInfoLong": "(Add-ons):\\nAs the Swift, your kills will not cause you to lunge.",
+  "UndeadInfoLong": "(Add-ons):\\nThis add-on is given to players that have been recruited by the Necromancer and the Deathknight to the Undead faction.",
   "UnluckyInfoLong": "(Add-ons):\\nAs the Unlucky, doing tasks, killing, or venting as a chance to kill you.",
   "GhoulInfoLong": "(Add-ons):\\nAs the Ghoul, one of two outcomes can occur on task completion.\\n\\nIf alive: Suicide\\nIf dead: You kill your killer if they're alive.\\n\\nOnly assigned to crewmates, and not crewmates with no tasks or are task-based.",
   "SunglassesInfoLong": "(Add-ons):\\nAs the Sunglasses, your vision is reduced.",
@@ -2915,7 +2919,11 @@
   "DeathknightInfoLong": "(Neutrals):\\nThe Deathknight must help the Necromancer convert players to the Undead. By using your pet button by someone who the Necromancer had used their kill button on, they will be converted. There can only be one Deathknight at a time, and if the Necromancer dies, the Deathknight will be the new Necromancer.",
   "UndeadCountMode.None": "None",
   "UndeadCountMode.Necromancer": "<#f7adcf>Necromancer</color>",
-  "UndeadCountMode.OriginalTeam": "Original Team",
+  "UndeadCountMode.Original": "Original Team",
+  "NecromancerCD": "Partial Recruit Cooldown",
+  "DKCD": "<#361d12>Deathknight</color> Recruit Cooldown",
+  "NecromancerKnowTargetRole": "Know Recruited Players' Roles",
+  "UndeadCountMode": "<#ed9abd>Undead</color> Players count as",
   "RecruitedByDeathknight": "You've been recruited to the Undead faction!",
   "DeathknightRecruitedPlayer": "Successfully recruited player to the Undead faction!",
   "NecromancerRecruitedPlayer": "Successfully recruited player partially",
