--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1525,6 +1525,7 @@
   "SuccubusKnowTargetRole": "Know <color=#cf6acd>Charmed</color> Player's Role",
   "SuccubusTargetKnowOtherTarget": "<color=#cf6acd>Charmed</color> players know each other",
   "SuccubusCanCharmNeutral": "Neutral Roles can be <color=#cf6acd>Charmed</color>",
+  "CharmedDiesOnSuccubusDeath": "<color=#cf6acd>Charmed</color> Players Die When <#cf6acd>Cultist</color> Dies",
   "InfectiousBiteCooldown": "Infect Cooldown",
   "KnowTargetRole": "Knows role of target",
   "TargetKnowsLawyer": "Target knows their <color=#008080>Lawyer</color>",
@@ -2654,7 +2655,7 @@
   "EnigmaClueLevelTitle": "Enigma Level Clue!",
   "EnigmaClueFriendCodeTitle": "Enigma Friend Code Clue!",
   "EnigmaClueTitle": "Enigma Clue!",
-  "PlagueDoctor": "Curse",
+  "PlagueDoctor": "Infection",
   "PlagueDoctorInfo": "Spread the infection!",
   "PlagueDoctorInfoLong": "(Neutrals):\\n(Plague Doctor from TOH)\\nThe Plague Doctor's goal is to infect every living player.\\nThey start by choosing one player to infect, after which anyone who spends a set\\namount of time in range of the infected player becomes infected themselves.\\nInfection progress is cumulative, and does not reset with distance or after meetings.",
   "PlagueDoctorInfectLimit": "Infect Limit",
