Add support for dlekS ehT & Fix a few bugs

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2360,6 +2360,7 @@
   "SkeldChance": "Chance that the map is The Skeld",
   "MiraChance": "Chance that the map is MIRA HQ",
   "PolusChance": "Chance that the map is Polus",
+  "DleksChance": "Chance that the map is <color=#66a186>dlekS ehT</color>",
   "AirshipChance": "Chance that the map is Airship",
   "FungleChance": "Chance that the map is The Fungle",
   "CamouflageMode.Default": "Default",
