Ability use gain every 5s, /changerole, votekick disable setting, add head hunter RPC, bug fixes

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1329,6 +1329,8 @@
   "TransporterTeleportMax": "Max number of teleports",
   "TriggerKill": "Kill",
   "RequiresPetIndicator": "  <#ff0000>PET</color>",
+  "SupportsPetIndicator": "  <#00ff00>✓PET</color>",
+  "SupportsPetMessage": "  <#00ff00>[✓] This role supports Pet button usage for ability triggers or other actions, maybe replacing venting, shapeshifting or killing.</color>",
   "UsePetInsteadOfKillButton": "Use Pet Button As Kill Button",
   "UsePets": "Use Pet button instead of Vent / Shapeshift",
   "PetToAssign": "Pet to Assign to Everyone",
@@ -2288,6 +2290,7 @@
   "CountdownText": "<color=#00ffa5>Re-Entering Lobby in</color> <b>{0}</b>s",
   "EAC.CheatDetected.HighLevel": "Warning: EAC detected High Level of cheats.",
   "EAC.CheatDetected.LowLevel": "Warning: EAC detected Low Level of cheats. One of the players is hacking.",
+  "DisableVoteBan": "Disable Vote-Kick (prevent hackers from banning everyone)",
   "PlayerIsRole": "{0} was {1}.",
   "PlayerExiled": "{0} was ejected...",
   "ExiledJester": "You're all fools!\\n{0} the {1} laughing out loud tricked you into ejecting them.\\nGG!",
