pet support indicator

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1329,8 +1329,8 @@
   "TransporterTeleportMax": "Max number of teleports",
   "TriggerKill": "Kill",
   "RequiresPetIndicator": "  <#ff0000>PET</color>",
-  "SupportsPetIndicator": "  <#00ff00>✓PET</color>",
-  "SupportsPetMessage": "  <#00ff00>[✓] This role supports Pet button usage for ability triggers or other actions, maybe replacing venting, shapeshifting or killing.</color>",
+  "SupportsPetIndicator": "    <#00ff00>✓PET</color>",
+  "SupportsPetMessage": "\\n\\n<#00ff00>[✓] This role supports Pet button usage for ability triggers or other actions, maybe replacing venting, shapeshifting or killing.</color>",
   "UsePetInsteadOfKillButton": "Use Pet Button As Kill Button",
   "UsePets": "Use Pet button instead of Vent / Shapeshift",
   "PetToAssign": "Pet to Assign to Everyone",
