Fix & Recode Swapper, Add missing strings, Add Swapper to CopyCat blacklist

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2994,12 +2994,13 @@
   "ExpressSpeedDur": "Increased Speed Duration",
   "NiceSwapper": "Swapper",
   "NiceSwapperInfo": "Swap players' votes",
-  "NiceSwapperInfoLong": "(Crewmates):\\nAs the Swapper, you can use the command <b>/sw <color=#0000ff>[ID]</color> twice to choose 2 players. Those votes received by those 2 players will be swapped.\\nYou can see everyone's <color=#0000ff>ID</color>s next to their name.\\n\\nFor example, if 3 players voted red, and 5 players voted yellow, and you swap red and yellows' IDs, then red will receive 5 votes, and yellow will receive 3 votes.\\n\\nDue to technical difficulties, the Host's original vote will seem unchanged, but it's only visual, their vote will still get swapped.",
+  "NiceSwapperInfoLong": "(Crewmates):\\nAs the Swapper, you can use the command <b>/sw <color=#0000ff>[ID]</color></b> twice to choose 2 players. Those votes received by those 2 players will be swapped.\\nYou can see everyone's <color=#0000ff>ID</color>s next to their name.\\n\\nFor example, if 3 players voted red, and 5 players voted yellow, and you swap red and yellows' IDs, then red will receive 5 votes, and yellow will receive 3 votes.\\n\\nDue to technical difficulties, the Host's original vote will seem unchanged, but it's only visual, their vote will still get swapped.",
   "NiceSwapperMax": "Initial Number of Swaps",
   "NiceSwapperTrialMax": "Ability use limit reached",
   "CanSwapSelfVotes": "<color=#922348>Swapper</color> Can Swap Themselves",
   "SwapperHideMsg": "<color=#00ff00>Hide <color=#922348>Swapper</color>'s commands</color>",
   "CantSwapSelf": "You can't swap yourself",
+  "SwapDead": "You cannot swap votes after you've died.",
   "SwapVote": "The votes received by <b>{0}</b> and <b>{1}</b> were swapped!",
   "SwapTitle": "[★ Swapper ★]",
   "SecurityGuard": "Security Guard",
@@ -3010,6 +3011,8 @@
   "SecurityGuardSkillDuration": "Ability Duration",
   "SecurityGuardSkillInUse": "Ability in use",
   "SecurityGuardSkillStop": "Ability expired",
+  "BusyLongTasks": "Amount of Extra Long Tasks",
+  "BusyShortTasks": "Amount of Extra Short Tasks",
   "Doormaster": "Door Master",
   "DoormasterInfo": "Open All Doors Anytime",
   "DoormasterInfoLong": "(Crewmates):\\nAs the Door Master, you can vent/pet to open all closed doors.\\n\\nDue to technical difficulties, this may not work on some maps.",
