--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -17,14 +17,14 @@
   "TeamImpostor": "Impostor",
   "TeamNeutral": "Neutro",
   "TeamCrewmate": "Tripulante",
-  "TeamMadmate": "Cúmplice",
+  "TeamMadmate": "Louco",
   "YouAreCrewmate": "Você é um Tripulante",
   "YouAreImpostor": "Você é um Impostor",
   "YouAreNeutral": "Você é um Neutro",
-  "YouAreMadmate": "Você é um Cúmplice",
+  "YouAreMadmate": "Você é um Louco",
   "CrewmateSub": "Encontre e expulse os <color=#ff1919>Impostores</color>",
   "ImpostorSub": "Sabote e mate todos",
-  "NeutralSub": "Trabalhe sozinho e alcance a vitória",
+  "NeutralSub": "Vença por sua conta!",
   "MadmateSub": "Ajude os <color=#ff1919>Impostores</color>",
   "KB_Normal": "Desafiante",
   "KB_NormalInfo": "Mate todos!",
@@ -1251,7 +1251,7 @@
   "CanTargetNeutralEvil": "O seu alvo pode ser um <color=#7f8c8d>Neutro</color> <color=#912900>Malvado</color>",
   "CanTargetNeutralChaos": "O seu alvo pode ser um <color=#7f8c8d>Neutro</color> do <color=#D4AF37>Caos</color>",
   "SidekickSheriffCanGoBerserk": "<color=#f8cd46>Xerife</color> <color=#00b4eb>Recrutado</color> pode enlouquecer",
-  "LawyerCanTargetImpostor": "O seu cliente pode ser um <color=#ff1919>Impostor</color>",
+  "LawyerCanTargetImpostor": "O alvo poderá ser <color=#ff1919>Impostor</color>",
   "LawyerCanTargetNeutralKiller": "O seu cliente pode ser um <color=#7f8c8d>Neutro Assassino</color>",
   "LawyerCanTargetCrewmate": "O seu cliente pode ser um <color=#8cffff>Tripulante</color>",
   "LawyerCanTargetJester": "O seu cliente pode ser um <color=#ec62a5>Palhaço</color>",
@@ -1329,6 +1329,8 @@
   "TransporterTeleportMax": "Número máximo de teletransportes",
   "TriggerKill": "Abate",
   "RequiresPetIndicator": "  <#ff0000>PET</color>",
+  "SupportsPetIndicator": "    <#00ff00>✓PET</color>",
+  "SupportsPetMessage": "\\n\\n<#00ff00>[✓] Este cargo suporta o uso de botões para animais por habilidades acionadas ou outras ações, talvez substituindo ventas, shapeshifting ou killing.</color>",
   "UsePetInsteadOfKillButton": "Usar botão Acariciar ao inves do Botão Matar",
   "UsePets": "Usar Botão Acariciar ao invés de Duto / Metamorfose",
   "PetToAssign": "Pet para Atribuir a todos",
@@ -2288,6 +2290,7 @@
   "CountdownText": "Voltando para o lobby em {0}s",
   "EAC.CheatDetected.HighLevel": "Aviso: EAC detectou altos níveis de trapaças.",
   "EAC.CheatDetected.LowLevel": "Aviso: EAC detectou baixo nível de trapaças. Um dos jogadores está hackeando.",
+  "DisableVoteBan": "Desativar Vote-Kick (impedir que hackers proíbam todos)",
   "PlayerIsRole": "{0} era o {1}",
   "PlayerExiled": "{0} foi ejetado",
   "ExiledJester": "Você foi enganado!\\n{0} era o {1} rindo da maneira que enganou vocês.\\nGG!",
@@ -2360,6 +2363,7 @@
   "SkeldChance": "Chance do mapa ser <color=#66a186>The Skeld</color>",
   "MiraChance": "Chance do mapa ser <color=#e84b56>MIRA HQ</color>",
   "PolusChance": "Chance do mapa ser <color=#a167c0>Polus</color>",
+  "DleksChance": "Chance de que o mapa seja <color=#66a186>dlekS ehT</color>",
   "AirshipChance": "Chance do mapa ser <color=#ed0007>Airship</color>",
   "FungleChance": "Chance do mapa ser <color=#ffa646>The Fungle</color>",
   "CamouflageMode.Default": "Padrão",
@@ -2943,7 +2947,7 @@
   "SoulHunterTargetNotifyNoVent": "<color=#ffff00>Você não pode usar os dutos no tempo de caça</color>",
   "SoulHunterTargetNotifyNoMeeting": "<color=#ffff00>Você não pode chamar uma reunião no tempo de caça</color>",
   "SoulHunterTargetNotifyNoKill": "<color=#ffff00>Você não pode matar o <color=#3f2c61>Ceifador de Almas</color>no tempo de caça</color>",
-  "SoulHunterNotify": "Você tem <color=#00ffa5>{0}s</color> para matar <color=#3f2c61>{1}</color>{0",
+  "SoulHunterNotify": "Você tem <color=#00ffa5>{0}s</color> para matar <color=#3f2c61>{1}</color>",
   "SoulHunterNotifySuccess": "<color=#00ff00>Sucesso!</color>",
   "SoulHunterNotifyFreeze": "Você pode começar a caçar <color=#3f2c61>{0}</color> em <color=#00ffa5>{1}s</color>",
   "Librarian": "Bibliotecário",
@@ -2990,12 +2994,13 @@
   "ExpressSpeedDur": "Duração do Impulso de Velocidade",
   "NiceSwapper": "Trocador",
   "NiceSwapperInfo": "Troque os Votos de Jogadores",
-  "NiceSwapperInfoLong": "(Tripulantes):\\nComo Trocador, você pode usar o comando <b>/sw <color=#0000ff>[ID]</color> duas vezes para escolher 2 jogadores. os votos recebidos nesses 2 jogadores serão trocados.\\nVocê pode ver os <color=#0000ff>ID</color>s de todos proximo ao nome.\\n\\nPor Exemplo, se 3 jogadores votaram no Vermelho, e 5 jogadores votaram no Amarelo, e você trocar os IDs do Vermelho e do Amarelo, então o Vermelho receberá 5 votos, e o Amarelo receberá 3.\\n\\nDevido a Dificuldades Tecnicas, o voto original do Anfitrião aparecerá normal (Nada Muda), mas é só visual, os votos ainda serão trocados.",
+  "NiceSwapperInfoLong": "(Tripulantes):\\nComo Trocador, você pode usar o comando <b>/sw <color=#0000ff>[ID]</color></b> duas vezes para escolher 2 jogadores. os votos recebidos nesses 2 jogadores serão trocados.\\nVocê pode ver os <color=#0000ff>ID</color>s de todos proximo ao nome.\\n\\nPor Exemplo, se 3 jogadores votaram no Vermelho, e 5 jogadores votaram no Amarelo, e você trocar os IDs do Vermelho e do Amarelo, então o Vermelho receberá 5 votos, e o Amarelo receberá 3.\\n\\nDevido a Dificuldades Tecnicas, o voto original do Anfitrião aparecerá normal (Nada Muda), mas é só visual, os votos ainda serão trocados.",
   "NiceSwapperMax": "Numero Inicial de Trocas",
   "NiceSwapperTrialMax": "Você atingiu seu limite de usos de habilidade!",
   "CanSwapSelfVotes": "Pode trocar seus próprios votos.",
   "SwapperHideMsg": "<color=#00ff00>Esconder Comandos do <color=#922348>Trocador</color></color>",
   "CantSwapSelf": "Não é possível trocar o próprio voto",
+  "SwapDead": "Não é possível trocar votos depois de ter morrido.",
   "SwapVote": "<b>{0}</b> e <b>{1}</b> Os votos foram trocados pelo Trocador",
   "SwapTitle": "[ ★ Troca de Votos ★ ]",
   "SecurityGuard": "Guarda de Segurança",
@@ -3006,6 +3011,8 @@
   "SecurityGuardSkillDuration": "Duração da Habilidade",
   "SecurityGuardSkillInUse": "Habilidade em uso",
   "SecurityGuardSkillStop": "Habilidade Expirou",
+  "BusyLongTasks": "Quantidade de tarefas longas extras",
+  "BusyShortTasks": "Quantidade de Tarefas Extras Curtas",
   "Doormaster": "Porteiro",
   "DoormasterInfo": "Abra portas",
   "DoormasterInfoLong": "(Tripulantes):\\nComo Porteiro, você pode dutar/usar pet para abrir todas as portas fechadas.\\n\\nDevido a dificuldades técnicas, isso pode nmão funcionar em alguns mapas.",
