Add Hot Potato Game Mode

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3106,6 +3106,17 @@
   "Tasker": "Tasker",
   "TaskerInfo": "FINISH TASKS FIRST TO WIN",
   "TaskerInfoLong": "FINISH TASKS FIRST TO WIN",
+  "HotPotato": "HOT POTATO",
+  "ModeHotPotato": "Gamemode: Hot Potato",
+  "ModeDescribe.HotPotato": "In the Hot Potato gamemode, one player always has the hot potato, and they can pass it to anyone by going near someone. Each X seconds (X is set by the host), the player who holds the hot potato dies. The last player alive wins!",
+  "HotPotato_Time": "The Holder of the Hot Potato is Killed Every",
+  "HotPotato_HolderSpeed": "Speed of the Player Holding the Hot Potato",
+  "HotPotato_Range": "Pass Range",
+  "HotPotato_TimeLeftSuffix": "<#00ffa5>Kill in </color>",
+  "HotPotato_HoldingNotify": "<#ffff00><size=2>You hold the Hot Potato! Pass it or die!</size></color>",
+  "Potato": "Player",
+  "PotatoInfo": "AVOID HAVING THE HOT POTATO",
+  "PotatoInfoLong": "AVOID HAVING THE HOT POTATO",
   "GNoCommandInfo": "<b>This Command can only be used when in lobby or after you die.</b>\\n\\ntype <b>/gno X</b> to play guess a number. X can be a number between 0 and 99 (both included). \\n\\nYou get maximum of <color=#ff0000>7 tries</color> to guess the number.\\n\\n Example:- <b>/gno 10</b>",
   "GNoLost": "Oh, you were so close! Just one more guess, and you might have deciphered the Da Vinci code! By the way, <color=#ff0000>the secret number was... {0}!</color> But hey, you were only off by a few billion possibilities.  Better luck next time, Sherlock! ",
   "GNoLow": "Oh, you're really nailing this! It's so low, I almost need a shovel to dig it up!\\nYou have <color=#ff0000>{0} guesses</color> left!",
