--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -272,6 +272,7 @@
   "Guesser": "Guesser",
   "Necroview": "Necroview",
   "Reach": "Reach",
+  "Haste": "Haste",
   "Magnet": "Magnet",
   "Charmed": "Charmed",
   "Bait": "Bait",
@@ -328,6 +329,7 @@
   "Prefix.Necroview": "Necroview",
   "Prefix.Recruit": "Recruit",
   "Prefix.Reach": "Reach",
+  "Prefix.Haste": "Haste",
   "Prefix.Magnet": "Magnet",
   "Prefix.Onbound": "Onbound",
   "Prefix.Knighted": "Knighted",
@@ -538,6 +540,7 @@
   "FoolInfo": "You can't fix sabotages",
   "AvangerInfo": "You take someone with you upon death",
   "YoutuberInfo": "Get killed first to win",
+  "HasteInfo": "Your kill cooldown progresses while in vents",
   "EgoistInfo": "Win on your own",
   "TicketsStealerInfo": "Gain votes with kills",
   "DualPersonalityInfo": "You count as two players",
@@ -784,6 +787,7 @@
   "KnightedInfoLong": "(Add-ons):\\nWhen a Monarch knights someone, they get an extra vote.",
   "AsthmaticInfoLong": "(Add-ons):\\nYou always have a symbol below your name with a timer that is red or green. You cannot move when the symbol/timer is red. The timer indicates when the color will change.",
   "UnreportableInfoLong": "(Add-ons):\\nWith the Disregarded add-on, your corpse cannot be reported.",
+  "HasteInfoLong": "(Add-ons):\\nWith the Disregarded add-on, your kill cooldown continues to go down at all times.",
   "ContagiousInfoLong": "(Betrayal Add-ons):\\nWhen the Virus infects you, you become contagious.\\nContagious players are on the Virus team.\\n\\nWhether or not you die after a meeting depends on the settings for the Virus.",
   "RogueInfoLong": "(Betrayal Add-ons):\\nAs the Rogue, you work against your team and work with other Rogues.\\n\\nYou cannot win with your original team.",
   "LuckyInfoLong": "(Add-ons):\\nWith the Lucky add-on there is a probability for you to evade the kill, the specific probability is set by the host. When the evasion takes effect, the killer will see the shield-animation, but you not know anything.",
@@ -2852,17 +2856,17 @@
   "GamblerIgnoreCursedWolfAndJinx": "Kill <color=#ff1919>Cursed Wolf</color> and <color=#ed2f91>Jinx</color>",
   "GamblerIgnorePestilence": "Kill <color=#343136>Pestilence</color>",
   "GamblerPositiveEffectChance": "Positive Effect Chance",
-  "GamblerGet.DelayedKill": "<color=#00ffa5>Effect:</color> Delayed Kill (<color=#00ffa5>{0}s</color>)",
-  "GamblerGet.Shield": "<color=#00ffa5>Effect:</color> Temporary Shield (<color=#00ffa5>{0}s</color>)",
-  "GamblerGet.NoLunge": "<color=#00ffa5>Effect:</color> No Lunge",
-  "GamblerGet.Swap": "<color=#00ffa5>Effect:</color> Swap Places with Someone",
-  "GamblerGet.IgnoreDefense": "<color=#00ffa5>Effect:</color> Break Through Defense",
-  "GamblerGet.LowKCD": "<color=#00ffa5>Effect:</color> Lower Kill Cooldown (<color=#00ffa5>{0}s</color>)",
-  "GamblerGet.Speedup": "<color=#00ffa5>Effect:</color> Higher Speed (<color=#00ffa5>{1}x</color>, for <color=#00ffa5>{0}s</color>)",
-  "GamblerGet.BSR": "<color=#ffa500>Effect:</color> Self-Report (in <color=#ffa500>{0}s</color>)",
-  "GamblerGet.Freeze": "<color=#ffa500>Effect:</color> Freeze (for <color=#ffa500>{0}s</color>)",
-  "GamblerGet.LowVision": "<color=#ffa500>Effect:</color> Lower Vision (<color=#ffa500>{1}x</color>, for <color=#ffa500>{0}s</color>)",
-  "GamblerGet.HighKCD": "<color=#ffa500>Effect:</color> Higher Kill Cooldown (<color=#ffa500>{0}s</color>)",
+  "GamblerGet.DelayedKill": "<color=#ffffff><color=#00ffa5>Effect:</color> Delayed Kill (<color=#00ffa5>{0}s</color>)</color>",
+  "GamblerGet.Shield": "<color=#ffffff><color=#00ffa5>Effect:</color> Temporary Shield (<color=#00ffa5>{0}s</color>)</color>",
+  "GamblerGet.NoLunge": "<color=#ffffff><color=#00ffa5>Effect:</color> No Lunge</color>",
+  "GamblerGet.Swap": "<color=#ffffff><color=#00ffa5>Effect:</color> Swap Places with Someone</color>",
+  "GamblerGet.IgnoreDefense": "<color=#ffffff><color=#00ffa5>Effect:</color> Break Through Defense</color>",
+  "GamblerGet.LowKCD": "<color=#ffffff><color=#00ffa5>Effect:</color> Lower Kill Cooldown (<color=#00ffa5>{0}s</color>)</color>",
+  "GamblerGet.Speedup": "<color=#ffffff><color=#00ffa5>Effect:</color> Higher Speed (<color=#00ffa5>{1}x</color>, for <color=#00ffa5>{0}s</color>)</color>",
+  "GamblerGet.BSR": "<color=#ffffff><color=#ffa500>Effect:</color> Self-Report (in <color=#ffa500>{0}s</color>)</color>",
+  "GamblerGet.Freeze": "<color=#ffffff><color=#ffa500>Effect:</color> Freeze (for <color=#ffa500>{0}s</color>)</color>",
+  "GamblerGet.LowVision": "<color=#ffffff><color=#ffa500>Effect:</color> Lower Vision (<color=#ffa500>{1}x</color>, for <color=#ffa500>{0}s</color>)</color>",
+  "GamblerGet.HighKCD": "<color=#ffffff><color=#ffa500>Effect:</color> Higher Kill Cooldown (<color=#ffa500>{0}s</color>)</color>",
   "Hitman": "Hitman",
   "HitmanInfo": "Select your target",
   "HitmanInfoLong": "(Impostors):\\nAs the Hitman, you may shapeshift into someone to mark them as your target. If you kill your target, your next kill cooldown will be lower.\\n\\nNote: Once you chose a target, you cannot change it. You'll get a chance to mark a target again after killing your current target.",
