--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2954,6 +2954,10 @@
   "SoulHunterNotify": "You have <color=#00ffa5>{0}s</color> to kill <color=#3f2c61>{1}</color>",
   "SoulHunterNotifySuccess": "<color=#00ff00>Success!</color>",
   "SoulHunterNotifyFreeze": "You can begin hunting <color=#3f2c61>{0}</color> in <color=#00ffa5>{1}s</color>",
+  "Beacon": "Beacon",
+  "BeaconInfo": "Increase Nearby Players' Vision During Lights",
+  "BeaconInfoLong": "(Crewmates):\\nAs the Beacon, during the lights sabotage, you increase the vision of players around you.",
+  "BeaconVisionIncrease": "Increased Vision for Affected Players During Lights Sabotage",
   "Librarian": "Librarian",
   "LibrarianInfo": "Silence the Reporters Nearby",
   "LibrarianInfoLong": "(Impostors):\\nAs the Librarian, when you're in silencing mode, if someone reports a body next to you, you'll kill them instead. After you kill someone like this, everyone will see 'SSSH!' in red under your name.",
